--- a/Pages/Curriculo.razor
+++ b/Pages/Curriculo.razor
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <h1 style="text-align: center;"Curicullum Vitae</h1>
-    <br /> 
+    <h1> style="text-align: center;"CURRICULUM VITAE</h1>
+    <br />  
     <h2>Maria Isabeli Antunes Medeiros</h2>
     <p>Estudante do Instituto Federal - Curso Técnico em Informática</p>
 
