--- a/Pages/Curriculo.razor
+++ b/Pages/Curriculo.razor
@@ -18,6 +18,7 @@
         <li><strong>Curso Técnico em Informática</strong> - IF (Instituto Federal)</li>
         <li>Conclusão prevista: Dezembro de 2025</li>
         <li>Ensino Médio integrado</li>
+        <li>Ensino Fundamental Completo no Colégio Educar</li>
     </ul>
 
     <h2>Experiência</h2>
